--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="images/logo/Booki.png" alt="logo Booki" href="#" id="logoBooki">
+        <img src="images/logo/Booki.png" alt="logo Booki" id="logoBooki">
         <nav class="aHeader">
             <a href="#ancreHebergement">Hébergements</a>
             <a href="#ancreActivites">Activités</a>
@@ -156,7 +156,7 @@
                 </div>
                 <a href="#" class="afficher-plus">Afficher plus</a>
             </div>
-            </div>
+          
 
             <div class="part2Section2">
                 <div class="headerPart2Section2">
@@ -211,7 +211,7 @@
                     </a>
                 </div>
             </div>
-            </div>
+            
         </section>
 
         <section class="section3">
